---
source: src/codegen/tac.rs
expression: tac
---
program fib
BeginFunc f0
Pop o1
t2 := 0
t3 := o1 == t2
jmp L1 !t3
t4 := 0
Return t4
L1
t5 := 1
t6 := o1 == t5
jmp L2 !t6
t7 := 1
Return t7
L2
t8 := 1
t9 := o1 - t8
Push t9
Call f0
Pop t10
t11 := 2
t12 := o1 - t11
Push t12
Call f0
Pop t13
t14 := t10 + t13
Return t14
EndFunc
begin fib
end fib

